Bug #38622 * Added univention_u logo for small crenns * Currently selected category stands out more * Added styles for the mobile menu and module search,   displayed on small screens and touch devices
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-4.1-1@68703 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -42,6 +42,10 @@
 		width: 100%;
 		padding-top: 25px;
 		padding-bottom: @padding-top;
+		@media (max-width: 400px) {
+			padding-top: 15px;
+			padding-bottom: 20px;
+		}
 		transition: font-size 0.2s, padding-bottom 0.2s;
 	}
 
@@ -57,7 +61,7 @@
 			position: relative;
 		}
 	}
-	
+
 	.dijitButton {
 		margin-left: 12px;
 
